--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i></a>
           &nbsp&nbsp
           <a class="nav-link" href="#"><i class="fa fa-user"> &nbsp Register</i></a>
-          <a class="nav-link" href="#"><i class="fa fa-sign-in"> &nbsp Register</i></a>
+          <a class="nav-link" href="#"><i class="fa fa-sign-in"> &nbsp Log-out</i></a>
         </div>
       </div>
     </div>
