--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- First Section -->
 
   <div class="container-fluid back">
-    <div class="row">
+    <div class="row roundss">
       <div class="col-md-12 col-12">
 
         <h1 class="mt-5 text-center text-white">Learn Excilence in Teaching.</h1>
